<resources>
    <string name="app_name">CryptoApp</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_updated_template">Время последнего обновления: %s</string>
    <string name="price">Цена:</string>
    <string name="min_for_day">Минимум за день:</string>
    <string name="max_for_day">Максимум за день:</string>
    <string name="last_deal">Последняя сделка:</string>
    <string name="last_updated">Обновлено:</string>
</resources>