<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinDetailActivity">

    <ImageView
        android:id="@+id/imageViewLogoCoinDetail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textViewCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="/"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoCoinDetail" />

    <TextView
        android:id="@+id/textViewCoinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCoin"
        app:layout_constraintEnd_toStartOf="@+id/textViewCoin"
        app:layout_constraintTop_toTopOf="@+id/textViewCoin"
        tools:text="BTS" />

    <TextView
        android:id="@+id/textViewCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCoin"
        app:layout_constraintStart_toEndOf="@+id/textViewCoin"
        app:layout_constraintTop_toTopOf="@+id/textViewCoin"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCoin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/textViewPriceDetailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewPriceDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textViewPriceDetailLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="7784.1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/textViewPriceDetail" />

            <TextView
                android:id="@+id/textViewMinForDayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/min_for_day"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewPriceDetailLabel" />

            <TextView
                android:id="@+id/textViewMinForDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/textViewMinForDayLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewMinForDayLabel"
                tools:text="111.2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/textViewMinForDayLabel" />

            <TextView
                android:id="@+id/textViewMaxForDayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/max_for_day"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewMinForDayLabel" />

            <TextView
                android:id="@+id/textViewMaxForDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textViewMaxForDayLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewMaxForDayLabel"
                tools:text="9255.2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/textViewMaxForDayLabel" />

            <TextView
                android:id="@+id/textViewLastDealLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/last_deal"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewMaxForDayLabel" />

            <TextView
                android:id="@+id/textViewLastDeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textViewLastDealLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewLastDealLabel"
                tools:text="Вася Пупкин" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/textViewLastDealLabel" />

            <TextView
                android:id="@+id/textViewLastUpdatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/last_updated"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewLastDealLabel" />

            <TextView
                android:id="@+id/textViewLastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewLastUpdatedLabel"
                tools:text="21:04:15" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>